--- a/FrontEnd/random.html
+++ b/FrontEnd/random.html
@@ -2,13 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bias Game</title>
+    <title>Writing Game</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="random.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 </head>
+<header>
+<h1 class="pagetitle"><a href="random.html" style="text-decoration: none"> Shake The Sphere!</a></h1>
+</header>
 <body>
-
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+            <h2 class="entertext">Enter Username</h2>
+            <h3>Enter a new username or an existing one if you already have one.</h3>
+        </div>
+    </div>
+</div>
+<div class="inputbox">
+    <input class="form-control form-control-lg" type="text" placeholder="username">
+    <button type="button" class="btn btn-primary">Enter</button>
+</div>
 </body>
 </html>
