created game.html file

--- a/FrontEnd/game.html
+++ b/FrontEnd/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Room</title>
+    <title>Shake The Sphere!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="random.css">
     <meta charset="utf-8">
@@ -12,19 +12,19 @@
     <h1 class="pagetitle"><a href="random.html" style="text-decoration: none"> Shake The Sphere!</a></h1>
 </header>
 <body>
-    <div class="row">
-        <div class="col-sm-5">
-            <h2 class="entertext">Create Room</h2>
-            <button type="button" class="btn btn-primary">Create</button>
-        </div>
-        <div class="col-sm-5">
-            <h2 class="entertext">Join Room</h2>
-            <h3>Enter a room code to join an existing room</h3>
-            <form>
-                <input class="form-control form-control-lg" type="text" placeholder="room code">
-                <button type="button" class="btn btn-primary">Join</button>
-            </form>
-        </div>
+<div class="container-fluid">
+    <h2 class="entertext"> Given Text </h2>
+    <p>{% placeholder "giventext" %}<p>
+</div>
+<div class="container-fluid">
+    <h2 class="entertext">
+        Rewrite the given text but with the following characteristics:
+        {% placeholder "trait1" %}, {% placeholder "trait2" %}, {% placeholder "trait3" %}
+    </h2>
+    <div class="form-group">
+        <label for="answer">Answer:</label>
+        <textarea class="form-control" rows="5" id="answer"></textarea>
+        <button type="button" class="btn btn-primary">Submit</button>
     </div>
 </div>
 </body>
