--- a/FrontEnd/random.html
+++ b/FrontEnd/random.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Writing Game</title>
+    <title>Shake the Sphere!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="random.css">
     <meta charset="utf-8">
@@ -20,9 +20,9 @@
         </div>
     </div>
 </div>
-<div class="inputbox">
+<form>
     <input class="form-control form-control-lg" type="text" placeholder="username">
     <button type="button" class="btn btn-primary">Enter</button>
-</div>
+</form>
 </body>
 </html>
