--- a/FrontEnd/room code.html
+++ b/FrontEnd/room code.html
@@ -9,15 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 </head>
 <header>
-    <h1 class="pagetitle"><a href="random.html" style="text-decoration: none"> Shake The Sphere!</a></h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2">
+                <img src="shakespeare_drawing-removebg-preview.png" class="img-fluid">
+            </div>
+            <div class="col-sm-10">
+                <h1 class="pagetitle"><a href="random.html" style="text-decoration: none"> Shake The Sphere!</a></h1>
+                <h3>A writing game to make Shakespeare quake in his grave</h3>
+            </div>
+        </div>
+    </div>
 </header>
 <body>
+    <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-4 text-center">
             <h2 class="entertext">Create Room</h2>
             <button type="button" class="btn btn-primary">Create</button>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-8 text-center">
             <h2 class="entertext">Join Room</h2>
             <h3>Enter a room code to join an existing room</h3>
             <form>
@@ -25,6 +36,7 @@
                 <button type="button" class="btn btn-primary">Join</button>
             </form>
         </div>
+    </div>
     </div>
 </div>
 </body>
